--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="container-fluid team py-5">
                     <div class="container py-5">
-                        <div class="text-center mx-auto mb-5 py-5" style="max-width: 800px;">
+                        <div class="text-center mx-auto mb-5" style="max-width: 800px;">
                             <p class="fs-4 text-uppercase text-primary">Nuestro catalogo</p>
                             <!-- <h1 class="display-4 mb-4">Spa & Beauty Specialist</h1> -->
                         </div>
@@ -213,7 +213,7 @@
                                         <img src="img/Fotos store/team-5.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
                                     </div>
                                     <div class="team-text rounded-bottom text-center p-4">
-                                        <h3 class="text-white">Huevo dinosaurio</h3>
+                                        <h3 class="text-white">Dinosaurio</h3>
                                         <p class="mb-0 text-white">Para el baño de tu bebé</p>                                      
                                         
                                     </div>
@@ -346,7 +346,7 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="appointment-form p-5">                            
-                            <h1 class="display-4 mb-4 text-white">CONTÁCTANOS</h1>
+                            <h1 class="display-4 mb-4 text-white ce">CONTÁCTANOS</h1>
                             <form>
                                 <div class="row gy-3 gx-4">
                                     <div class="col-lg-6">
